Migrate build-logic to gradle plugin